@@ -1,3 +1,8 @@
+2011-09-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* debbugs.el (debbugs-get-status): Handle the case of nil
+	BUG-NUMBERS.
+
 2011-08-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Debbugs.wsdl (ArrayOfArrayOfAnyType)
